--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <mat-card class="search-card">
         <mat-card-content class="search-box">
             <mat-form-field>
-                <input matInput #searchInput placeholder="Enter a PSN ID" autocomplete="off">
+                <input matInput #searchInput placeholder="Enter a PSN ID (ex: jepot)" autocomplete="off">
             </mat-form-field>
             <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
             <div>Ensure your profile is updated on
