--- a/src/app/components/trophy-case/trophy-case.component.html
+++ b/src/app/components/trophy-case/trophy-case.component.html
@@ -65,5 +65,6 @@
                 <div *ngIf="displaySettings.displayRarity">{{plat.rarity}}%</div>
             </div>
         </div>
+        <div *ngIf="displaySettings.displayWatermark" class="watermark">Made with PSNplatinums.com</div>
     </div>
 </div>
