--- a/src/app/components/mosaic/mosaic.component.html
+++ b/src/app/components/mosaic/mosaic.component.html
@@ -60,6 +60,8 @@
                 <mat-checkbox class="example-margin" [(ngModel)]="displaySettings.displayTrophyTitle">Trophy Title
                 </mat-checkbox>
                 <mat-checkbox class="example-margin" [(ngModel)]="displaySettings.displayRarity">Rarity</mat-checkbox>
+                <mat-checkbox class="example-margin" [(ngModel)]="displaySettings.displayWatermark">Watermark
+                </mat-checkbox>
               </section>
             </mat-expansion-panel>
 
