--- a/src/app/components/trophy-case/trophy-case.component.scss
+++ b/src/app/components/trophy-case/trophy-case.component.scss
@@ -37,9 +37,13 @@
 
 .totalStats {
     flex-grow: 1;    
-    display: flex;
     justify-content: flex-end;
     font-family: 'SST Roman';
+    display: none;
+
+    @media screen and (min-width: 800px) {
+        display: flex;
+    }
 }
 
 .totalCountContainer {
@@ -62,7 +66,7 @@
     @media screen and (min-width: 800px) {
         height: 40px;
     }
-    min-height: 30px;
+    min-height: 25px;
     filter: drop-shadow(3px 3px 5px #222);
 }
 
