--- a/src/app/components/wrapped/wrapped.component.scss
+++ b/src/app/components/wrapped/wrapped.component.scss
@@ -1,6 +1,6 @@
 .outer-container {
     background-image: linear-gradient(90deg,#002a5c,#00397e,#002a5c);
-    font-family: 'SST Medium';
+    font-family: SST Medium;
 }
 
 .milestone-container {
