--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
             <mat-form-field>
                 <input matInput #searchInput placeholder="Enter a PSN ID (ex: jepot)" autocomplete="off">
             </mat-form-field>
-            <mat-progress-bar *ngIf="loading" mode="determinate"
+            <mat-progress-bar *ngIf="loading" mode="{{loadingProgress.fetched ? 'determinate' : 'indeterminate'}}"
                 [value]="loadingProgress.fetched/loadingProgress.total * 100"></mat-progress-bar>
             <div>Ensure your profile is updated on
                 <a target="_blank" rel="noopener" href="https://psnprofiles.com/">PSNProfiles</a>.
