--- a/src/app/components/mosaic/mosaic.component.html
+++ b/src/app/components/mosaic/mosaic.component.html
@@ -148,6 +148,8 @@
           <mat-divider class="saveButtonDivider"></mat-divider>
           <button class="saveButton" mat-raised-button color="primary" (click)="trophyCase.save()">Save as
             PNG</button>
+          <button class="saveButton" mat-raised-button color="primary" (click)="trophyCase.share()">Share to
+            Reddit</button>
           <mat-spinner *ngIf="isSaveLoading" class="save-spinner" [diameter]="30"></mat-spinner>
         </ng-container>
       </div>
