--- a/src/app/components/mosaic/mosaic.component.scss
+++ b/src/app/components/mosaic/mosaic.component.scss
@@ -65,6 +65,7 @@ mat-form-field {
 
 .saveButton {
     margin-top: 20px;
+    margin-right: 10px;
 }
 
 .mat-divider-horizontal {
@@ -96,7 +97,6 @@ mat-form-field {
 
 .save-spinner {
     display: inline;
-    margin-left: 10px;
 }
 
 .gameFilterTitle {
