Improve apple touch icon, simplify watermark, improve share to reddit to dodge safari popup prevention

--- a/src/app/components/trophy-case/trophy-case.component.html
+++ b/src/app/components/trophy-case/trophy-case.component.html
@@ -66,6 +66,6 @@
                 <div *ngIf="displaySettings.displayRarity">{{plat.rarity}}%</div>
             </div>
         </div>
-        <div *ngIf="displaySettings.displayWatermark" class="watermark">Made with PSNplatinums.com</div>
+        <div *ngIf="displaySettings.displayWatermark" class="watermark">PSNplatinums.com</div>
     </div>
 </div>
