--- a/src/app/components/trophy-case/trophy-case.component.scss
+++ b/src/app/components/trophy-case/trophy-case.component.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     color: white;
-    background-image: linear-gradient( to right, #002a5c, #00397e,  #002a5c);
+    // background-image: linear-gradient( to right, #002a5c, #00397e,  #002a5c);
     // padding: 20px 30px;
     width: calc(100% - 40px);
     padding: 20px;
@@ -102,7 +102,7 @@
     padding: 20px;
     background-color: yellow;
     width: calc(100% - 40px);
-    background-image: linear-gradient(#072250, #051f4a);
+    // background-image: linear-gradient(#072250, #051f4a);
     text-align: center;
 }
 
