Add date unlocked to visibilty

--- a/src/app/components/mosaic/mosaic.component.html
+++ b/src/app/components/mosaic/mosaic.component.html
@@ -87,6 +87,8 @@
                 <mat-checkbox class="example-margin" [(ngModel)]="displaySettings.displayTrophyTitle">Trophy Title
                 </mat-checkbox>
                 <mat-checkbox class="example-margin" [(ngModel)]="displaySettings.displayRarity">Rarity</mat-checkbox>
+                <mat-checkbox class="example-margin" [(ngModel)]="displaySettings.displayDateUnlocked">Date Unlocked
+                </mat-checkbox>
                 <mat-checkbox class="example-margin" [(ngModel)]="displaySettings.displayWatermark">Watermark
                 </mat-checkbox>
               </section>
