Add pink and orange

--- a/src/app/components/mosaic/mosaic.component.html
+++ b/src/app/components/mosaic/mosaic.component.html
@@ -20,6 +20,8 @@
                   <mat-radio-button class="radioButton" value="BLUE">Blue</mat-radio-button>
                   <mat-radio-button class="radioButton" value="GREEN">Green</mat-radio-button>
                   <mat-radio-button class="radioButton" value="RED">Red</mat-radio-button>
+                  <mat-radio-button class="radioButton" value="PINK">Pink</mat-radio-button>
+                  <mat-radio-button class="radioButton" value="ORANGE">Orange</mat-radio-button>
                 </mat-radio-group>
               </section>
 
