--- a/src/app/components/trophy-case/trophy-case.component.scss
+++ b/src/app/components/trophy-case/trophy-case.component.scss
@@ -1,7 +1,10 @@
 :host {
-    flex-grow: 4;
+    width: 100%;
     font-family: SST Light;
-    max-width: 100%;
+    max-width: 800px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .upperContainer {
