--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,9 @@ a {
 
 .search-card {
     margin-bottom: 10px;
+    max-width: 540px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .error {
@@ -30,8 +33,8 @@ a {
 }
 
 .outermost-div {
-    max-width: 540px;
-    margin: 0 auto;
+    // max-width: 540px;
+    // margin: 0 auto;
 }
 
 ::ng-deep .mat-progress-bar .mat-progress-bar-buffer{
