--- a/src/app/components/mosaic/mosaic.component.scss
+++ b/src/app/components/mosaic/mosaic.component.scss
@@ -26,10 +26,11 @@ mat-form-field {
 }
 
 .options {
-    // width: 100%;
-    flex-grow: 1;
-    flex-basis: 30%;
-    height: fit-content;
+    max-width: 540px;
+    width: calc( 100% - 32px );
+    // flex-grow: 1;
+    // flex-basis: 30%;
+    // height: fit-content;
     margin-bottom: 10px;
 }
 
@@ -74,6 +75,7 @@ mat-form-field {
 .totalPage {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .error {
