--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,8 @@
             <button class="action-button" mat-raised-button color="primary"
                 (click)="mode = 'wrapped'; search(searchInput.value)">2020
                 Wrapped</button>
+            <a mat-raised-button color="accent" href="https://www.buymeacoffee.com/naveedgol"
+                target="_blank">Donate!</a>
         </mat-card-content>
     </mat-card>
 
