add username routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,1 @@
-<div class="outermost-div">
-    <mat-card class="search-card">
-        <mat-card-content class="search-box">
-            <mat-form-field>
-                <input matInput #searchInput placeholder="Enter a PSN ID" autocomplete="off" (keydown.enter)="search(searchInput.value)">
-            </mat-form-field>
-            <mat-progress-bar *ngIf="loading" mode="{{loadingProgress.fetched ? 'determinate' : 'indeterminate'}}"
-                [value]="loadingProgress.fetched/loadingProgress.total * 100"></mat-progress-bar>
-            <mat-card-subtitle>Ensure your profile is updated on
-                <a target="_blank" rel="noopener" href="https://psnprofiles.com/">PSNProfiles</a>.
-            </mat-card-subtitle>
-            <div class="error" *ngIf="error">
-                {{error}}
-            </div>
-            <button class="action-button" mat-raised-button color="primary"
-                (click)="mode = 'mosaic'; search(searchInput.value)">Mosaic</button>
-            <!-- <button class="action-button" mat-raised-button color="primary"
-                (click)="mode = 'wrapped'; search(searchInput.value)">2020
-                Wrapped</button> -->
-        </mat-card-content>
-    </mat-card>
-
-    <app-mosaic *ngIf="profileFetched && mode=='mosaic'"></app-mosaic>
-    <!-- <app-wrapped *ngIf="profileFetched && mode=='wrapped'"></app-wrapped> -->
-</div>
+<router-outlet></router-outlet>
