--- a/src/app/components/trophy-case/trophy-case.component.html
+++ b/src/app/components/trophy-case/trophy-case.component.html
@@ -1,72 +1,84 @@
-<div id="capture" [style.width]="'calc(100% + ' + displaySettings.width+'px)'">
-    <div class="upperContainer" *ngIf="user && displaySettings.displayUserInfo"
-        [style.background-image]="getUpperColor()">
-        <div class="userInfo">
-            <div class="userIdContainer">
-                <img class="avatar" [src]="user.avatar" alt="avatar">
-                <span class="userId">{{user.id}}</span>
-            </div>
-            <div class="totalStats">
-                <div class="levelContainer">
-                    <div class="levelUpperContainer">
-                        <img class="levelImage" [src]="getLevelImage()" alt="PSN level">
-                        <div class="levelNum">{{user.level}}</div>
-                    </div>
-                    <div class="progressBarBase">
-                    </div>
-                    <div class="progressBar" [style.width.%]="user.levelProgress">
-                    </div>
-                </div>
-                <div class="totalCountContainer" *ngIf="displaySettings.displayTrophyCounts">
-                    <div class="totalCountNum">{{user.getTotalCount()}}</div>
-                    <div class="totalCountLabel">Total</div>
-                </div>
-            </div>
+<div id="capture" [style.width]="'calc(100% + ' + displaySettings.width + 'px)'">
+  <div
+    class="upperContainer"
+    *ngIf="user && displaySettings.displayUserInfo"
+    [style.background-image]="getUpperColor()">
+    <div class="userInfo">
+      <div class="userIdContainer">
+        <img class="avatar" [src]="user.avatar" alt="avatar" />
+        <span class="userId">{{ user.id }}</span>
+      </div>
+      <div class="totalStats">
+        <div class="levelContainer">
+          <div class="levelUpperContainer">
+            <img class="levelImage" [src]="getLevelImage()" alt="PSN level" />
+            <div class="levelNum">{{ user.level }}</div>
+          </div>
+          <div class="progressBarBase"></div>
+          <div class="progressBar" [style.width.%]="user.levelProgress"></div>
         </div>
-        <div class="divider" *ngIf="displaySettings.displayTrophyCounts"></div>
-        <div class="trophyCountsContainer" *ngIf="displaySettings.displayTrophyCounts">
-            <div class="trophyCount">
-                <img class="trophyImage" src="assets/images/platinum.png" alt="platinum">
-                <div class="trophyCountNum">{{user.platinumCount}}</div>
-            </div>
-            <div class="trophyCount">
-                <img class="trophyImage" src="assets/images/gold.png" alt="gold">
-                <div class="trophyCountNum">{{user.goldCount}}</div>
-            </div>
-            <div class="trophyCount">
-                <img class="trophyImage" src="assets/images/silver.png" alt="silver">
-                <div class="trophyCountNum">{{user.silverCount}}</div>
-            </div>
-            <div class="trophyCount">
-                <img class="trophyImage" src="assets/images/bronze.png" alt="bronze">
-                <div class="trophyCountNum">{{user.bronzeCount}}</div>
-            </div>
+        <div class="totalCountContainer" *ngIf="displaySettings.displayTrophyCounts">
+          <div class="totalCountNum">{{ user.getTotalCount() }}</div>
+          <div class="totalCountLabel">Total</div>
         </div>
+      </div>
     </div>
-    <div class="lowerContainer" *ngIf="user && platinums.length" [style.background-image]="getLowerColor()">
-        <div class="cabinetContainer" *ngIf="cabinet && cabinet.length">
-            <div class="platIconContainer cabinetPlatIconContainer" *ngFor="let plat of cabinet"
-                [style.marginTop.px]="displaySettings.rowSpacingPx"
-                [style.marginBottom.px]="displaySettings.rowSpacingPx">
-                <img [src]="displaySettings.iconType === 'GAME' ? plat.gameIcon : plat.icon" class="platinumIcon"
-                    [style.width.px]="100" [title]="plat.game" alt="{{plat.game}}">
-                <div class="title">{{plat.game}}</div>
-                <div>{{plat.rarity}}%</div>
-            </div>
-        </div>
+    <div class="divider" *ngIf="displaySettings.displayTrophyCounts"></div>
+    <div class="trophyCountsContainer" *ngIf="displaySettings.displayTrophyCounts">
+      <div class="trophyCount">
+        <img class="trophyImage" src="assets/images/platinum.png" alt="platinum" />
+        <div class="trophyCountNum">{{ user.platinumCount }}</div>
+      </div>
+      <div class="trophyCount">
+        <img class="trophyImage" src="assets/images/gold.png" alt="gold" />
+        <div class="trophyCountNum">{{ user.goldCount }}</div>
+      </div>
+      <div class="trophyCount">
+        <img class="trophyImage" src="assets/images/silver.png" alt="silver" />
+        <div class="trophyCountNum">{{ user.silverCount }}</div>
+      </div>
+      <div class="trophyCount">
+        <img class="trophyImage" src="assets/images/bronze.png" alt="bronze" />
+        <div class="trophyCountNum">{{ user.bronzeCount }}</div>
+      </div>
+    </div>
+  </div>
+  <div class="lowerContainer" *ngIf="user && platinums.length" [style.background-image]="getLowerColor()">
+    <div class="cabinetContainer" *ngIf="cabinet && cabinet.length">
+      <div
+        class="platIconContainer cabinetPlatIconContainer"
+        *ngFor="let plat of cabinet"
+        [style.marginTop.px]="displaySettings.rowSpacingPx"
+        [style.marginBottom.px]="displaySettings.rowSpacingPx">
+        <img
+          [src]="displaySettings.iconType === 'GAME' ? plat.gameIcon : plat.icon"
+          class="platinumIcon"
+          [style.width.px]="100"
+          [title]="plat.game"
+          alt="{{ plat.game }}" />
+        <div class="title">{{ plat.game }}</div>
+        <div>{{ plat.rarity }}%</div>
+      </div>
+    </div>
 
-        <div class="platinumGrid" [ngStyle]="{ 'grid-template-columns': getStyle() }">
-            <div class="platIconContainer" *ngFor="let plat of platinums"
-                [style.marginTop.px]="displaySettings.rowSpacingPx"
-                [style.marginBottom.px]="displaySettings.rowSpacingPx">
-                <img [src]="displaySettings.iconType === 'GAME' ? plat.gameIcon : plat.icon" class="platinumIcon"
-                    [style.width.px]="displaySettings.iconWidthPx" [title]="plat.game" alt="{{plat.game}}">
-                <div *ngIf="displaySettings.displayGameTitle" class="title">{{plat.game}}</div>
-                <div *ngIf="displaySettings.displayTrophyTitle" class="title">{{plat.name}}</div>
-                <div *ngIf="displaySettings.displayRarity">{{plat.rarity}}%</div>
-                <div *ngIf="displaySettings.displayDateUnlocked">{{plat.date | date: mediumDate}}</div>
-            </div>
-        </div>
-        <div *ngIf="displaySettings.displayWatermark" class="watermark">PSNplatinums.com</div>
+    <div class="platinumGrid" [ngStyle]="{ 'grid-template-columns': getStyle() }">
+      <div
+        class="platIconContainer"
+        *ngFor="let plat of platinums"
+        [style.marginTop.px]="displaySettings.rowSpacingPx"
+        [style.marginBottom.px]="displaySettings.rowSpacingPx">
+        <img
+          [src]="displaySettings.iconType === 'GAME' ? plat.gameIcon : plat.icon"
+          class="platinumIcon"
+          [style.width.px]="displaySettings.iconWidthPx"
+          [title]="plat.game"
+          alt="{{ plat.game }}" />
+        <div *ngIf="displaySettings.displayGameTitle" class="title">{{ plat.game }}</div>
+        <div *ngIf="displaySettings.displayTrophyTitle" class="title">{{ plat.name }}</div>
+        <div *ngIf="displaySettings.displayRarity">{{ plat.rarity }}%</div>
+        <div *ngIf="displaySettings.displayDateUnlocked">{{ plat.date | date: mediumDate }}</div>
+      </div>
     </div>
+    <div *ngIf="displaySettings.displayWatermark" class="watermark">PSNplatinums.com</div>
+  </div>
 </div>
